app/_components/todo/primitive-card/PrimitiveCard.scss
@import '/app/_styles/todo/variables.scss';
@import '/app/_styles/color/variables.scss';

.primitiveCard {
    background-color: $main-dark-1-color;
    border-radius: 8px;
    font-size: small;
    height: 25px;
    min-width: 150px;
    max-width: 350px;

    .todoName {
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow-x: hidden;
        margin-left: 10px;
        min-width: 0px;
    }
}

